--- a/project/saas/base/_global.scss
+++ b/project/saas/base/_global.scss
@@ -1,8 +1,6 @@
 html,
 body {
   font-weight: 400;
-  font-size: 1.2vw;
-  line-height: 1.3vw;
   font-family: "Montserrat", sans-serif;
   background-color: #4d4a8b;
   height: 100%;
@@ -30,11 +28,10 @@ body {
 .input {
   border-radius: 50px;
 }
-
 .avatar {
   border-radius: 50%;
-  width: 7vw;
-  height: 7vw;
+  width: 100px;
+  height: 100px;
 }
 
 @media (max-width: 1200px) {
@@ -54,7 +51,7 @@ body {
     max-width: none;
   }
   .avatar {
-    width: 10vw;
-    height: 10vw;
+    width: 100px;
+    height: 100px;
   }
 }
