--- a/project/saas/base/_typography.scss
+++ b/project/saas/base/_typography.scss
@@ -13,7 +13,7 @@ p {
   font-family: "Montserrat", sans-serif;
 }
 
-.sub-titile {
+.sub-title {
   font-size: 28px;
   line-height: 32px;
   width: 600;
@@ -22,11 +22,15 @@ p {
 
 h5 {
   color: white;
-  font-size: 1.6vw;
+  font-size: 22px;
   font-family: "Ubuntu", sans-serif;
-  line-height: 1.8vw;
+  line-height: 22px;
 }
 
+select,
+label {
+  font-size: 18px;
+}
 @media (max-width: 1200px) {
 }
 
