--- a/project/saas/blocks/_add-restaurant-form.scss
+++ b/project/saas/blocks/_add-restaurant-form.scss
@@ -2,6 +2,7 @@
   text-align: center;
   margin-top: 80px;
   &__inner {
+    padding-bottom: 20px;
     padding-top: 20px;
     .button {
       margin: auto;
@@ -30,6 +31,38 @@
     justify-content: right;
     .scheme {
       width: 80%;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 992px) {
+  .add-restaurant-form {
+    &__item {
+      width: 55%;
+    }
+    &__size-items {
+      width: 80%;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .add-restaurant-form {
+    &__item {
+      width: 70%;
+    }
+    &__size-items {
+      width: 80%;
+      display: block;
+    }
+    &__scheme-add {
+      .scheme {
+        width: 100%;
+      }
+      display: block;
     }
   }
 }
