--- a/project/saas/blocks/_edit-form.scss
+++ b/project/saas/blocks/_edit-form.scss
@@ -33,8 +33,9 @@
     border-radius: 50px;
   }
   .button {
-    margin-top: 20px;
     width: 30%;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
 
@@ -46,22 +47,18 @@
   }
   .container {
     .title {
-      font-size: 4vw;
     }
   }
   .edit-form {
     &__item {
       label {
-        font-size: 2.2vw;
       }
     }
     &__input {
-      font-size: 1.6vw;
     }
     &__inner {
       width: 100%;
       .sub-title {
-        font-size: 2.4vw;
       }
     }
   }
@@ -70,22 +67,18 @@
 @media (max-width: 767px) {
   .container {
     .title {
-      font-size: 7vw;
     }
   }
   .edit-form {
     &__item {
       label {
-        font-size: 3.2vw;
       }
     }
     &__input {
-      font-size: 3vw;
     }
     &__inner {
       width: 100%;
       .sub-title {
-        font-size: 4vw;
       }
     }
   }
