--- a/project/saas/blocks/_list.scss
+++ b/project/saas/blocks/_list.scss
@@ -1,9 +1,10 @@
 .list {
   &__item {
     background: #2385ce;
-    height: 120px;
+    min-height: 120px;
     border-radius: 36px;
     margin: 24px 0;
+    padding: 0 60px;
 
     display: flex;
     align-items: center;
@@ -23,16 +24,18 @@
 
 @media (max-width: 992px) {
   .my-restaurants-list {
+  }
+}
+@media (max-width: 767px) {
+  .list {
     &__item {
-      height: 100px;
+      padding: 10px 20px;
+    }
+    .button {
+      margin: 10px 10px;
     }
   }
 }
 
 @media (max-width: 700px) {
-  .my-restaurants-list {
-    &__item {
-      height: 80px;
-    }
-  }
 }
