--- a/project/saas/blocks/_restaurant-info.scss
+++ b/project/saas/blocks/_restaurant-info.scss
@@ -1,5 +1,4 @@
 .restaurant-info {
-  height: 200px;
   background: rgba(27, 24, 196, 0.4);
   &__inner {
     display: flex;
@@ -11,6 +10,7 @@
   height: 200px;
   display: flex;
   align-items: center;
+  justify-content: space-around;
   .restaurant-avatar {
     width: 180px;
     height: 180px;
@@ -33,6 +33,8 @@
   }
 }
 .booking-block {
+  justify-content: space-around;
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -46,35 +48,22 @@
 
 @media (max-width: 767px) {
   .restaurant-info {
-    height: 140px;
+    &__inner {
+      display: block;
+    }
   }
   .main-info-text {
     &__inner {
-      h2 {
-        font-size: 3vw;
-      }
     }
   }
   .sub-info {
     &__inner {
-      p {
-        font-size: 2.2vw;
-      }
     }
   }
   .booking-block {
     &__inner {
-      p {
-        font-size: 1.8vw;
-      }
-    }
-  }
-  .main-info {
-    height: 140px;
-    .restaurant-avatar {
-      width: 100px;
-      height: 100px;
-      border-radius: 100%;
+      margin-top: 40px;
+      padding-bottom: 20px;
     }
   }
 }
