--- a/project/saas/blocks/_users-list.scss
+++ b/project/saas/blocks/_users-list.scss
@@ -9,3 +9,24 @@
     width: 24%;
   }
 }
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 992px) {
+}
+
+@media (max-width: 767px) {
+  .users {
+    &__inner {
+      .list {
+        &__item {
+          display: block;
+        }
+      }
+    }
+    .button {
+      width: 100%;
+    }
+  }
+}
