--- a/web-programming/Lab-13/directives/src/app/app.component.css
+++ b/web-programming/Lab-13/directives/src/app/app.component.css
@@ -1,6 +1,6 @@
-
-div {
-  width: 500px;
-  height: 500px;
+span {
+  display: block;
+  width: 300px;
+  height: 300px;
   background-color: aquamarine;
 }
