--- a/web-programming/Lab-13/directives/src/app/app.component.html
+++ b/web-programming/Lab-13/directives/src/app/app.component.html
@@ -1,3 +1,11 @@
-<div appColorOpacity color="blue" opacity=0.1>
+<span appColorOpacity color="blue" opacity=0.1></span>
 
+
+<div *while="posts; let post">
+  <h3>{{post.title}}</h3>
+  <p>{{post.text}}</p>
+  <hr>
 </div>
+
+
+
