--- a/web-programming/Lab-13/directives/src/app/app.component.html
+++ b/web-programming/Lab-13/directives/src/app/app.component.html
@@ -1,11 +1,8 @@
-<span appColorOpacity color="blue" opacity=0.1></span>
+<!--<span appColorOpacity color="blue" opacity=0.1></span>-->
 
+<post-add (newPostEvent)="addPost($event)"></post-add>
+<post-list [posts]="posts" (onDelete)="onDelete($event)"></post-list>
 
-<div *while="posts; let post">
-  <h3>{{post.title}}</h3>
-  <p>{{post.text}}</p>
-  <hr>
-</div>
 
 
 
