--- a/web-programming/Lab-13/directives/src/app/app.component.html
+++ b/web-programming/Lab-13/directives/src/app/app.component.html
@@ -1,8 +1,8 @@
-<!--<span appColorOpacity color="blue" opacity=0.1></span>-->
 
 <post-add (newPostEvent)="addPost($event)"></post-add>
 <post-list [posts]="posts" (onDelete)="onDelete($event)"></post-list>
 
+<span appColorOpacity color="blue" opacity=0.1></span>
 
 
 
