Added post service

--- a/web-programming/Lab-14/services/src/app/post-list/post-list.component.html
+++ b/web-programming/Lab-14/services/src/app/post-list/post-list.component.html
@@ -1,9 +1,10 @@
 <ul *trackBy="posts">
-  <li *while="posts; let post; let i = index">
+  <li *while="posts; let post;">
     <h3>{{post.title}}</h3>
     <p>{{post.text}}</p>
     <p>{{post.date}}</p>
-    <button (click)="onDeleteClick(i)">delete</button>
+    <button (click)="onDeleteClick(post.id)">delete</button>
+
     <hr>
   </li>
 </ul>
