--- a/web-programming/Lab-14/services/src/app/app.component.html
+++ b/web-programming/Lab-14/services/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<post-add (newPostEvent)="addPost($event)"></post-add>
-<post-list [posts]="posts" (onDelete)="onDelete($event)"></post-list>
+<post-add ></post-add>
+<post-list></post-list>
 
 <span appColorOpacity color="blue" opacity=0.1></span>
 
