--- a/web-programming/Lab-14/services/src/app/post-list/post-list.component.html
+++ b/web-programming/Lab-14/services/src/app/post-list/post-list.component.html
@@ -1,10 +1,10 @@
-<ul *trackBy="posts">
-  <li *while="posts; let post;">
+<ul>
+  <li *ngFor="let post of posts">
     <h3>{{post.title}}</h3>
     <p>{{post.text}}</p>
     <p>{{post.date}}</p>
     <button (click)="onDeleteClick(post.id)">delete</button>
-
+    <app-comment [_postId]=post.id></app-comment>
     <hr>
   </li>
 </ul>
