--- a/web-programming/Lab-15/forms/src/app/post-list/post-list.component.html
+++ b/web-programming/Lab-15/forms/src/app/post-list/post-list.component.html
@@ -4,7 +4,7 @@
     <p>{{post.text}}</p>
     <p>{{post.date}}</p>
     <button (click)="onDeleteClick(post.id)">delete</button>
-<!--    <app-comment [_postId]=post.id></app-comment>-->
+    <app-comment [_postId]=post.id></app-comment>
     <hr>
   </li>
 </ul>
