--- a/project-web/src/app/shared/layout/footer.component.scss
+++ b/project-web/src/app/shared/layout/footer.component.scss
@@ -1,6 +1,9 @@
 .footer {
   height: 80px;
   flex: 0 0 auto;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
   background-color: #213e5a;
 
   font-size: 20px;
