added restaurant module

--- a/project-web/src/app/shared/layout/header.component.html
+++ b/project-web/src/app/shared/layout/header.component.html
@@ -10,7 +10,7 @@
             <a class="menu__list-link" href="index.html">Обзор</a>
           </li>
           <li class="menu__list-link">
-            <a class="menu__list-link" href="restaurants.html">Рестораны</a>
+            <a class="menu__list-link" routerLink="/restaurants">Рестораны</a>
           </li>
           <li class="menu__list-link">
             <a class="menu__list-link" href="my-restaurants.html">Мои рестораны</a>
