--- a/project-web/src/app/auth/login/login.component.scss
+++ b/project-web/src/app/auth/login/login.component.scss
@@ -1,8 +1,9 @@
+
 .login {
-  height: 750px;
   padding: 200px 0px;
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
+  height: 100%;
 }
 
 .login-form {
