--- a/project-web/src/app/app.component.html
+++ b/project-web/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <main class="main">
+    <router-outlet></router-outlet>
+  </main>
   <app-footer></app-footer>
 </div>
