--- a/project-web/src/app/auth/signup/signup.component.scss
+++ b/project-web/src/app/auth/signup/signup.component.scss
@@ -1,8 +1,8 @@
 .signup {
-  height: 750px;
+  height: 100%;
+  width: 100%;
   padding: 200px 0px;
   background: rgba(0, 0, 0, 0.6);
-  width: 100%;
 }
 
 .signup-form {
