addded pagination to restaurant list

--- a/project-web/src/app/auth/login/login.component.html
+++ b/project-web/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
       </div>
       <app-list-errors [errors]="errors"></app-list-errors>
       <button [disabled]="loginForm.invalid" class="button" type="submit">Войти</button>
-      <a routerLink="/login">Зарегистрироваться</a>
+      <a routerLink="/signup">Зарегистрироваться</a>
     </form>
   </div>
 </section>
