--- a/project-web/src/styles.scss
+++ b/project-web/src/styles.scss
@@ -68,7 +68,7 @@ body {
   background-color: #4d4a8b;
   height: 100%;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   color: white;
 }
 
