--- a/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.scss
+++ b/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.scss
@@ -1,4 +1,17 @@
+.pagination{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+}
 .restaurants {
+  height: 80%;
+  width: 100%;
+  //padding: 20px 0;
+  //padding-bottom: 30px;
+  //max-height: 100%;
+  overflow-y: auto;
   text-align: center;
   &__inner {
     display: flex;
@@ -9,19 +22,22 @@
   display: grid;
   grid-gap: 10px;
   grid-template: repeat(1, 1fr) / repeat(3, 1fr);
-  grid-auto-flow: row; /* or 'row', 'row dense', 'column dense' */
-  width: 70%;
+  //grid-auto-flow: row; /* or 'row', 'row dense', 'column dense' */
+  grid-template-rows: auto 240px;
+  width: 100%;
   &__item {
-    border-radius: 15px;
-
+    justify-self: center;
+    border-radius: 12px;
+    margin: 10px 0;
     padding: 15px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 240px;
+    width: 90%;
+    //width: 240px;
     height: auto;
-    background: rgba(18, 156, 233, 0.72);
+    background: #90B92E;
 
     h5 {
       padding-top: 15px;
@@ -33,7 +49,7 @@
 .restaurant-avatar {
   width: 160px;
   height: 100px;
-  border-radius: 50px;
+  border-radius: 30px;
 }
 
 @media (max-width: 1200px) {
@@ -45,11 +61,8 @@
   }
 }
 
-@media (max-width: 747px) {
+@media (max-width: 547px) {
   .restaurants-list {
-    &__item {
-      width: 240px;
-    }
     grid-template: repeat(1, 1fr) / repeat(1, 1fr);
   }
 }
@@ -65,6 +78,8 @@
   &__input {
     // display: none;
     margin-left: 8vw;
+    font-size: 18px;
+
     height: 48px;
     width: 605px;
     background: rgba(229, 229, 229, 0.8);
@@ -86,7 +101,6 @@
 @media (max-width: 767px) {
   .search-form {
     &__input {
-      font-size: 3vw;
     }
     &__button {
       position: relative;
