--- a/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.html
+++ b/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.html
@@ -18,7 +18,8 @@
         <li *ngFor="let restaurant of restaurants | paginate: pagination" class="restaurants-list__item">
 
           <a routerLink="'/restaurants/{{restaurant.id}}">
-            <img class="restaurant-avatar" [src]="getImage(restaurant)" alt="ava"/>
+            <img class="restaurant-avatar" [src]="getImage(restaurant)" (error)="restaurant.avatar =defaultImage"
+                 alt="ava"/>
           </a>
           <h5>{{restaurant.name}}</h5>
           <p>5.3</p>
@@ -29,8 +30,8 @@
   </div>
 </section>
 <!--<div class="container">-->
-  <div class="pagination">
+<div class="pagination">
 
-    <pagination-controls class="pagination__inner" (pageChange)="pageChange($event)"></pagination-controls>
-  </div>
+  <pagination-controls class="pagination__inner" (pageChange)="pageChange($event)"></pagination-controls>
+</div>
 <!--</div>-->
