added rating to restaurant

--- a/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.html
+++ b/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.html
@@ -22,7 +22,12 @@
                  alt="ava"/>
           </a>
           <h5>{{restaurant.name}}</h5>
-          <p>5.3</p>
+          <div >
+            <span style=" text-align: center; vertical-align: middle">
+            {{restaurant.rating}}
+            </span>
+            <img style="width: 25px; display: inline-block; vertical-align: middle" src="assets/icons/star.png" alt="stars">
+          </div>
         </li>
 
       </ul>
