--- a/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.html
+++ b/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.html
@@ -5,7 +5,7 @@
           <app-restaurant-ava [avatarUrl]="restaurant.avatar"></app-restaurant-ava>
           <div class="main-info-text">
             <div class="main-info-text__inner">
-              <h2 class="sub-title">{{restaurant.name}}"</h2>
+              <h2 class="sub-title">{{restaurant.name}}</h2>
               <div class="sub-info">
                 <div class="sub-info__inner">
                   <p>{{restaurant.adres}}</p>
