--- a/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.html
+++ b/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.html
@@ -24,5 +24,4 @@
       </div>
     </div>
   </section>
-  <app-reviews></app-reviews>
-
+<app-review-list [restaurantId]="restaurant.id"></app-review-list>
