added comments list

--- a/project-web/src/app/restaurant/restaurant-rating/restaurant-rating.component.html
+++ b/project-web/src/app/restaurant/restaurant-rating/restaurant-rating.component.html
@@ -1,8 +1,1 @@
-<div class="rating">
-  <span class="rating__number">
-    {{rating}}
- </span>
-  <img class="rating__img"
-       src="assets/icons/star.png"
-       alt="stars">
-</div>
+<app-rating [rating]="rating"></app-rating>
